Fixed left margin in dark mode.

--- a/static/assets/css/alpine.css
+++ b/static/assets/css/alpine.css
@@ -178,6 +178,10 @@ nav.main-nav {
 	.site-title {
 		margin-left: 30px;
 	}
-  
+
+	.site-menus {
+		margin-left: 30px;
+	}
+
 }
 
